--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
   </head>
 
   <body>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-    “Hello World, we are software developers!”
-    <script  src="js/index.js"></script>
+    <main id="main">
+      <div id="title"> Dr.Norman Borlaug </div>
+      <div id="img-div">
+        <img id="image" src="#"> alt="Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger."
+
+      </div>
+     
+  </main>
   </body>
 </html>
