--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
 
   <body>
     <main id="main">
-      <div id="title"> Dr.Norman Borlaug </div>
-      <div id="img-div">
-        <img id="image" src="#"> alt="Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger."
-
+      <div id="title">
+        Dr.Norman Borlaug
       </div>
-     
-  </main>
+      <div id="img-div">
+        <img id="image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg" alt="Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.">
+        <figurecaption id="img-caption">Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</figurecaption>
+      </div>
+      <div id="tribute-info">
+        
+      </div>    
+    </main>
   </body>
 </html>
