--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
       </div>
       <div id="img-div">
         <img id="image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg" alt="Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.">
-        <figurecaption id="img-caption">Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</figurecaption>
+        <p>
+        <figurecaption id="img-caption">Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</figurecaption></p>
       </div>
       <div id="tribute-info">
         <h2>Here's a timeline of Dr.Borlaug's life:</h2>
